--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <a href="/lyrics.html"><button> Back</button></a>
+    <a href="/lyrics.html"><button>Back</button></a>
     <div class="container">
       <div class="title">
         <h1 class="title-name">
@@ -43,7 +43,13 @@
       Built by EMX industry/<a href="https://api.lyrics.ovh" target="_blank">Powered by EMX API</a>
     </div>
 
-   
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Clipboard.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
+
+    <!-- Custom JS -->
     <script src="search.js"></script>
   </body>
 </html>
