--- a/lyrics.html
+++ b/lyrics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lyrics finder-find your favourite lyrics</title>
     <link rel="stylesheet" href="/lyrics.css">
 
 </head>
@@ -13,7 +13,7 @@
         Lyrics Finder
     </h1>
     <h2 class="title-legend">Get your favourite song lyrics</h2>
-    <a href="/index.html" ><button>Get started ></button></a>
+    <a href="/lyrics finder.html" ><button>Get started ></button></a>
     </div>
 
 
