--- a/lyrics finder.html
+++ b/lyrics finder.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <a href="/lyrics.html"><button>Back</button></a>
+    <a href="/index.html"><button>Back</button></a>
     <div class="container">
       <div class="title">
         <h1 class="title-name">
