--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lyrics finder-find your favourite lyrics</title>
-    <link rel="stylesheet" href="/lyrics.css">
+    <link rel="stylesheet" href="lyrics.css">
 
 </head>
 <body>
